--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,24 @@
 <head> 
     <title>A Crabby WebPage</title>
 </head>
+<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+<style>
+    nav{
+        font-family: 'Raleway', sans-serif;
+    }
+</style>
 <body bgcolor="#e0ffbf">
+<h4>
+<nav>
+<div class="topnav">
+    <a class="active" href="#myreceipebook">My Recipe Book</a>
+    <a href="#ListRecipes">List recipes</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+
+</div>
+</nav>
+</h4>
     <h1 align="middle"> How To Make Crab Cakes Better Than A Fancy Seafood Restaurant </h1>
         <em> These Classic Old Bay Crab Cakes Recipe is a traditional favorite made with fresh picked crab meat and Old Bay Seasoning. They are perfect for that beach vacation! </em>
     <p> 
